--- a/modules/ch2-services/pages/s6-administration-quiz-answers.adoc
+++ b/modules/ch2-services/pages/s6-administration-quiz-answers.adoc
@@ -4,8 +4,6 @@
 
 _Estimated reading time: *{time_estimate} minutes*._
 
-WARNING: Pending Review
-
 == OpenStack Services and IT Infrastructure
 
 1. Which of the following OpenStack services addresses the need an OpenStack Administrator has for grouping API resources so they can be managed by different teams of OpenStack Operators?
@@ -14,18 +12,18 @@ WARNING: Pending Review
 _Correct: Keystone groups API resources into projects and domains for separation of concerns._
 
 * [ ] Dashboard (Horizon) +
-_Incorrect: Horizon whould just display resources from the groups (projects and domains) mnanaged by Keystone._
+_Incorrect: Horizon would just display resources from the groups (projects and domains) managed by Keystone._
 
 * [ ] Bare Metal Provisioning (Ironic) +
 _Incorrect: There are no requirements for running applications on physical machines._
 
 * [ ] Metering (Ceilometer) +
-_Incorrect: The requirements are not about performance metrics and other runtime metric from OpenStack services._
+_Incorrect: The requirements are not about performance metrics and another runtime metric from OpenStack services._
 
 2. Which of the following OpenStack services addresses the need an OpenStack Administrator has for instantaneous data on usage of CPU and memory from compute nodes, to assess if they are idle or overutilized by application workloads?
 
 * [ ] Identity (Keystone) +
-_Incorrect: The requirements are not about authentication nor service discovery._
+_Incorrect: The requirements are not about authentication or service discovery._
 
 * [x] *Dashboard (Horizon)* +
 _Correct: Horizon displays data at the moment, but cannot display historical data from Ceilometer._
@@ -36,10 +34,10 @@ _Incorrect: There are no requirements for running applications on physical machi
 * [x] *Metering (Ceilometer)* +
 _Correct: Ceilometer is the source for instantaneous performance data._
 
-3. Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing physical machines for an application which requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?
+3. Which of the following OpenStack services addresses the need an OpenStack Administrator has for providing physical machines for an application that requires direct access to hardware devices and for which it is not possible to provide pass-through devices for a virtual machine?
 
 * [ ] Identity (Keystone) +
-_Incorrect: The requirements are not about authentication nor service discovery._
+_Incorrect: The requirements are not about authentication or service discovery._
 
 * [ ] Dashboard (Horizon) +
 _Incorrect: The requirements are not about web or graphical user interfaces._
@@ -48,4 +46,4 @@ _Incorrect: The requirements are not about web or graphical user interfaces._
 _Correct: Ironic enables using physical machines as server instances for applications running on OpenStack._
 
 * [ ] Metering (Ceilometer) +
-_Incorrect: The requirements are not about performance metrics and other runtime metric from OpenStack services._
+_Incorrect: The requirements are not about performance metrics and another runtime metric from OpenStack services._
